# g01-tcp-file-server-my-inaho

./: README.md  pyproject.toml
docs/: client.md  server-poll.md  server-select.md  server-sync.md  server-thread.md  server.md
server_files/: secret.txt
src/client/: client.py
src/server/: server_poll.py  server_select.py  server_sync.py  server_thread.py
