[project]
name = "g01-tcp-file-server-my-inaho"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server", "src/client"]

[project.scripts]
server_sync = "server.server_sync:main"
server_select = "server.server_select:main"
server_poll = "server.server_poll:main"
server_thread = "server.server_thread:main"
client = "client.client:main"